<resources>
    <string name="CancelCheckIn_SuccessMsg">Check-in Cancellation Completed</string>
    <string name="Conditions_Membership_Data_Privacy_Security_Statement_content">"●Intelligent Property Rights 

 China Airlines is committed to protecting privacy of your personal data and expects you to understand your related rights so as to feel comfortable to use all related Internet services provided by China Airlines (hereinafter referred to as We). In addition, to enhance information protection, you must provide personal identification information to access certain parts of this websites.

 ●Collection of Customer Information

 We will collect your personal information through the following methods in certain parts of this website:

 1.Applying for Dynasty Flyer Program (DFP) Membership

 2.Online booking/ticketing

 3.DFP interactive services and travel information provided for members

 4.Messaging service

 5.Online activities

 Through the above collection methods, we may collect your personal information, including but not limited to:

 Title, Chinese and English name on your passport, date of birth, nationality/region, ID number, passport number, country/region of residence, mailing address, email address, phone number, fax number, mobile number, DFP membership card number and password, credit card information (including owner name, card number, and card expiration date), company name, company address, profession and position, assignees' name and DFP membership card number, preferred language, special diets and seat and travel preferences. If you fail to provide the required personal information, certain parts of the requested online services may be unavailable.

 ●Use of Customer Information

 Customer information will be used for business management purpose only and is aimed at improving service quality and providing enhanced personal service for customers:

 1. Evaluate and handle DFP membership applications

 2. Operate DFP services, including mileage accumulation, DFP membership records, mileage redemption records, and mileage transfer records

 3. Handle members' trip arrangement and the products and services purchased

 4. Handle online services, message notification service, discount service, and promotion service for members

 5. Market surveys and questionnaires for services improvement

 6. We may provide your information collected by us to our affiliated companies, subsidiaries, and other business partners so that they can process the information and provide related services to you.

 We promise that we will not reveal your personal information to any third parties not related to this service or transaction without your consent.

 When you book or purchase travel-related products (car rental, hotel, or others) sold by other providers on this website, these providers may collect your personal information through their transaction platform to provide subsequent services.

 ●Links to Other Websites

 Our website contains links to other websites that are operated under different privacy terms. When you leave our website and access other websites, please remain alert and read the privacy terms of other websites. We have no control over and provide no guarantee on the information submitted to these websites.

 ●Sending of Emails

 We obtain your email account according to Collection of Customer Information. In order to provide you with more services or discount offers, we will send you emails containing the above related contents and indicate that we are the sender in the email.

 ●Changes to Privacy/Security Statement

 We may revise this Privacy/Security Statement without prior notice. This web page will display the latest content. Should a significant modification be made to the use of customer information, we will announce and post those changes on our website so that you can know related matters. We have adopted appropriate electronic and management measures to maintain the accuracy of the collected information, prevent unauthorized login, and ensure correct use of the information. When you input sensitive information such as credit card details, the information will be automatically converted to ciphers before being sent to the Internet.

 ●Customer Self-Protection

 Please keep your personal information safe and do not provide any personal information to others. Do not forget to log out after completing online booking, purchase and member contacts information change, etc. If you share a computer with others or use a public computer, please close the browser window to protect your personal information from unauthorized collection and use. To protect your consumption rights, please purchase our international flight tickets through normal sales channels, such as China Airlines website, China Airlines sales offices, YesTrip Travel Service and other travel services.

 ●Governing Law and Court

 Any dispute arising out of or in connection with this website shall be governed and construed by the laws of the Republic of China, and shall be resolved by Taiwan Taipei District Court which serves as the court of first instance.

 *Please contact us if you have any questions regarding our Security Statement and Privacy Policy.

"</string>
    <string name="Conditions_Membership_Data_Privacy_Security_Statement_title">China Airlines Data Privacy &amp; Security Statement</string>
    <string name="are_you_sure_you_want_to_disconnect">Do you wish to disconnect your %1$s account?</string>
    <string name="become_a_dynasty_flyer_hello">Hi</string>
    <string name="cancel">Cancel</string>
    <string name="connecting_to_social_account_makes_you_log_in_more_easier">To login with ease and enjoy our personalized services, please connect to your social network account.</string>
    <string name="due_date">Expiration Date</string>
    <string name="find_my_booking_traveling_with_other_companions">are you traveling with other companions?</string>
    <string name="input_detail_comma">,</string>
    <string name="input_detail_hello">Hello</string>
    <string name="input_detail_send">Change</string>
    <string name="input_detail_update_email_msg">Have you shared your mail with others? This mail %1$s is belonging to more than one card number. Please update your email to correct it.</string>
    <string name="manage_miles_not_find">Mileage Information Not Found</string>
    <string name="member_logifacebook">Facebook</string>
    <string name="member_login_forget">Forgot?</string>
    <string name="member_login_google_plus">Google</string>
    <string name="member_login_keep_logged_in">Keep me logged in</string>
    <string name="member_login_log_in">Login</string>
    <string name="member_login_new_to_here">Not a member yet?</string>
    <string name="member_login_or">or</string>
    <string name="member_login_please_enter">Please enter a valid Card No/Email/Mobile</string>
    <string name="member_login_sign_up">Sign Up</string>
    <string name="menu_log_in">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_welcome_tag">Welcome to China Airlines</string>
    <string name="miles">Mile</string>
    <string name="miles_have_been_imported_to_your_account">You have been credited with %1$s miles for %4$s (%2$s-%3$s)</string>
    <string name="miles_overdue_in_6_months">Miles expiring within 6 months</string>
    <string name="my_miles">Manage Miles</string>
    <string name="no">No</string>
    <string name="scheme_auth_eshopping_button_agree">同意</string>
    <string name="scheme_auth_eshopping_name">SkyBoutique</string>
    <string name="scheme_auth_eshopping_note" />
    <string name="scheme_auth_eshopping_note_text">中華航空App 會將您的個人資訊提供給 華航免稅品(預訂)</string>
    <string name="yes">Yes</string>
    <string name="your_miles_has_been_update">Miles Updated</string>
</resources>