<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_text" android:layout_width="290.0dip" android:layout_height="64.0dip" android:layout_marginTop="32.0dip" android:layout_centerHorizontal="true">
        <TextView android:textSize="20.0sp" android:textColor="@color/white_four" android:id="@id/tv_hello" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/input_detail_hello" style="@style/regular" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white_four" android:id="@id/tv_welcome" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/menu_welcome_tag" android:layout_below="@id/tv_hello" style="@style/light" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@id/ll_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="123.0dip" android:splitMotionEvents="false">
        <Button android:textSize="20.0sp" android:textColor="@color/white_four" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/btn_login" android:background="@drawable/bg_sidemenu_btn_selector" android:layout_width="100.0dip" android:layout_height="34.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/menu_log_in" android:singleLine="true" android:textAllCaps="false" style="@style/light" />
        <Button android:textSize="20.0sp" android:textColor="@color/white_four" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/btn_signup" android:background="@drawable/bg_sidemenu_btn_selector" android:layout_width="100.0dip" android:layout_height="34.0dip" android:layout_marginLeft="10.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/menu_sign_up" android:singleLine="true" android:textAllCaps="false" style="@style/light" />
    </LinearLayout>
</RelativeLayout>