<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_bg" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/ll_textfeild" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_centerHorizontal="true">
        <FrameLayout android:id="@id/fl_account" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/tv_please_enter" android:visibility="gone" android:layout_width="320.0dip" android:layout_height="wrap_content" android:text="@string/member_login_please_enter" style="@style/light" />
        <FrameLayout android:id="@id/fl_password" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout android:id="@id/rlayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/ll_textfeild">
        <ImageButton android:gravity="center" android:id="@id/ibtn_keep" android:background="@drawable/bg_transparent_press_black20" android:layout_width="24.0dip" android:layout_height="24.0dip" android:src="@drawable/btn_checkbox_off" android:scaleType="fitXY" android:layout_centerVertical="true" />
        <Button android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/btn_keep" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/member_login_keep_logged_in" android:layout_toRightOf="@id/ibtn_keep" android:layout_centerVertical="true" android:textAllCaps="false" style="@style/light" />
        <Button android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/btn_forget" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/member_login_forget" android:layout_alignTop="@id/ibtn_forget" android:layout_centerVertical="true" android:textAllCaps="false" android:layout_toStartOf="@id/ibtn_forget" style="@style/regular" />
        <ImageButton android:id="@id/ibtn_forget" android:background="@drawable/bg_transparent_press_black20" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_arrow" android:scaleType="fitXY" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <Button android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/btn_login" android:background="@drawable/bg_btn_pinkish_red_selector" android:layout_width="320.0dip" android:layout_height="40.0dip" android:layout_marginTop="40.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/member_login_log_in" android:layout_below="@id/rlayout" android:layout_centerHorizontal="true" android:textAllCaps="false" style="@style/regular" />
    <TextView android:textSize="16.0sp" android:textColor="@color/white_four" android:gravity="center" android:id="@id/tv_or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/member_login_or" android:layout_above="@id/ll_other_login" android:layout_below="@id/btn_login" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:alpha="0.8" style="@style/light" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_other_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_above="@id/ll_goto_sign_up" android:splitMotionEvents="false">
        <RelativeLayout android:id="@id/rl_facebook" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageButton android:id="@id/ibtn_f_login" android:background="@drawable/bg_facebook_login_btn_selector" android:layout_width="155.0dip" android:layout_height="40.0dip" android:scaleType="fitXY" />
            <TextView android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/tv_facebook" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="61.69998dip" android:text="@string/member_logifacebook" android:layout_centerVertical="true" style="@style/light" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_google" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
            <ImageButton android:id="@id/ibtn_g_login" android:background="@drawable/bg_google_login_btn_selector" android:layout_width="155.0dip" android:layout_height="40.0dip" android:scaleType="fitXY" />
            <TextView android:textSize="16.0dip" android:textColor="@color/black_54" android:id="@id/tv_google" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="61.69998dip" android:text="@string/member_login_google_plus" android:layout_centerVertical="true" style="@style/light" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_goto_sign_up" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/tv_new" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/member_login_new_to_here" android:layout_centerVertical="true" android:alpha="0.8" style="@style/light" />
        <Button android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/btn_signup" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/member_login_sign_up" android:layout_centerVertical="true" android:textAllCaps="false" style="@style/regular" />
        <ImageButton android:id="@id/ibtn_signup" android:background="@drawable/bg_transparent_press_black20" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/ic_arrow" android:scaleType="fitXY" android:layout_toRightOf="@id/btn_signup" android:layout_centerVertical="true" />
    </LinearLayout>
</RelativeLayout>