<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root" android:background="@color/black_60" android:layout_width="wrap_content" android:layout_height="80.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_centerVertical="true">
        <TextView android:textSize="16.0sp" android:textColor="@color/white_four" android:id="@id/tv_up" android:layout_width="228.0dip" android:layout_height="wrap_content" android:text="@string/your_miles_has_been_update" style="@style/regular" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white_four" android:id="@id/tv_down" android:layout_width="228.0dip" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/miles_have_been_imported_to_your_account" android:alpha="0.86" style="@style/light" />
    </LinearLayout>
    <RelativeLayout android:id="@id/rl_btn" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true">
        <Button android:textSize="13.0sp" android:textColor="@color/white_four" android:gravity="center" android:id="@id/btn_my_miles" android:background="@drawable/bg_transparent_press_drak_grey" android:layout_width="72.0dip" android:layout_height="32.0dip" android:text="@string/my_miles" style="@style/light" />
    </RelativeLayout>
</RelativeLayout>