<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_miles_overdue" android:background="@drawable/bg_manage_miles_head_radius" android:padding="20.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="64.0px">
        <TextView android:textSize="20.0px" android:textColor="@color/black_one" android:id="@id/tv_miles_overdue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="24.0px" android:text="@string/miles_overdue_in_6_months" style="@style/regular" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_list" android:background="@drawable/bg_manage_miles_body_radius" android:paddingBottom="20.0px" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ll_miles_overdue">
        <RelativeLayout android:id="@id/ll_list_head" android:background="@color/white_seven" android:paddingLeft="20.0px" android:paddingRight="20.0px" android:layout_width="fill_parent" android:layout_height="24.0px" android:layout_marginTop="1.0px">
            <TextView android:textSize="13.0px" android:textColor="@color/grey_four" android:id="@id/tv_head_data" android:layout_width="130.0px" android:layout_height="wrap_content" android:text="@string/due_date" android:layout_centerVertical="true" style="@style/light" />
            <TextView android:textSize="13.0px" android:textColor="@color/grey_four" android:gravity="right" android:id="@id/tv_miles_head" android:layout_width="130.0px" android:layout_height="wrap_content" android:text="@string/miles" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/light" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_list_data" android:layout_width="fill_parent" android:layout_height="310.0px" android:layout_marginLeft="20.0px" android:layout_marginTop="10.0px" android:layout_marginRight="20.0px" android:splitMotionEvents="false">
            <TextView android:textSize="18.0px" android:textColor="@color/black_one" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_not_find" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/manage_miles_not_find" style="@style/light" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>